Fix GCallback Python wrapper leak

The PyObject wrapper for GCallbacks was not calling tp_free in the custom
tp_dealloc class method.

https://bugzilla.gnome.org/show_bug.cgi?id=695130